[gd_scene load_steps=7 format=3 uid="uid://b3nlvmyb440ce"]

[ext_resource type="Script" path="res://Assets/Scripts/GameModes/Classic.gd" id="1_5n5j6"]
[ext_resource type="PackedScene" uid="uid://cdmuarr6mdqy2" path="res://Prefabs/MainBoard.tscn" id="2_3ftkq"]
[ext_resource type="AnimationLibrary" uid="uid://cadj7bbsvu750" path="res://Assets/Animations/Boards.res" id="3_qhrjo"]
[ext_resource type="Texture2D" uid="uid://vvq3nfcryfj8" path="res://Assets/Sprites/BGNs/tetrio-coverart-alt.png" id="5_cnisw"]

[sub_resource type="Animation" id="Animation_nu1ek"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Board:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Board:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Board:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Board:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-300.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Board:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-150.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yrgys"]
_data = {
"RESET": SubResource("Animation_nu1ek")
}

[node name="MainGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5n5j6")

[node name="Boards" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Player1" type="Control" parent="Boards"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Board" parent="Boards/Player1" instance=ExtResource("2_3ftkq")]
layout_mode = 1

[node name="AttackLabel" parent="Boards/Player1/Board/DisplayInfo/LeftSide/Elements" index="2"]
visible = false

[node name="TimeLabel" parent="Boards/Player1/Board/DisplayInfo/LeftSide/Elements" index="3"]
visible = false

[node name="GarbageMeter" parent="Boards/Player1/Board/DisplayInfo/LeftSide" index="1"]
visible = false

[node name="VSLabel" parent="Boards/Player1/Board/DisplayInfo/RightSide/Elements" index="1"]
visible = false

[node name="Lines" parent="Boards/Player1/Board/DisplayInfo/RightSide/Elements" index="2"]
visible = true

[node name="LinesGoal" parent="Boards/Player1/Board/DisplayInfo/RightSide/Elements/Lines/Data" index="1"]
visible = false

[node name="Animator" type="AnimationPlayer" parent="Boards/Player1"]
libraries = {
"": SubResource("AnimationLibrary_yrgys"),
"Boards": ExtResource("3_qhrjo")
}

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -100
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_cnisw")
expand_mode = 2
stretch_mode = 6

[connection signal="Attack" from="Boards/Player1/Board" to="Boards/Player1/Board/DisplayInfo" method="Attack"]
[connection signal="Lines" from="Boards/Player1/Board" to="." method="VerifyLines"]
[connection signal="TopedOut" from="Boards/Player1/Board" to="." method="LostTheGame"]
[connection signal="animation_finished" from="Boards/Player1/Animator" to="." method="_on_animator_animation_finished"]

[editable path="Boards/Player1/Board"]
